# kinect2stl

./: README.md
src/: CMakeLists.txt  kinect2stl.cpp
